--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "*",
+    "@react-navigation/native-stack": "*",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.0",
-    "react-native-bouncy-checkbox": "^3.0.7"
+    "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-gesture-handler": "*",
+    "react-native-safe-area-context": "*",
+    "react-native-screens": "*",
+    "react-redux": "^8.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -23,6 +30,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/metro-config": "^0.76.3",
     "@types/react": "^18.0.24",
+    "@types/react-redux": "^7.1.25",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
